--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="theme-color" content="#fd548e" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Somos un grupo de emprendedores de la linda Ciudad de Hunucmá. Nuestro propósito es apoyar a los emprendedores de localidaddes 
+      cercanas a impulsar los productos que ofrecen, crear cupones o paquetes para hacer tu venta más atractiva hacia el cliente final."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
